dnl
dnl Part of: Nausicaa/Scripts
dnl Contents: configuration template
dnl Date: Fri Jan  9, 2009
dnl
dnl Abstract
dnl
dnl
dnl
dnl Copyright (c) 2009 Marco Maggi <marcomaggi@gna.org>
dnl
dnl This  program  is free  software:  you  can redistribute  it
dnl and/or modify it  under the terms of the  GNU General Public
dnl License as published by the Free Software Foundation, either
dnl version  3 of  the License,  or (at  your option)  any later
dnl version.
dnl
dnl This  program is  distributed in  the hope  that it  will be
dnl useful, but  WITHOUT ANY WARRANTY; without  even the implied
dnl warranty  of  MERCHANTABILITY or  FITNESS  FOR A  PARTICULAR
dnl PURPOSE.   See  the  GNU  General Public  License  for  more
dnl details.
dnl
dnl You should  have received a  copy of the GNU  General Public
dnl License   along   with    this   program.    If   not,   see
dnl <http://www.gnu.org/licenses/>.
dnl

dnl page
dnl --------------------------------------------------------------------
dnl Setup.
dnl --------------------------------------------------------------------

AC_INIT([nausicaa-scripts],[0.1d0])
NAUSICAA_BEGIN

nausicaa_ENABLE_SLS=no
nausicaa_ENABLE_FASL=no

dnl NAUSICAA_SYSTEM_SETUP
dnl NAUSICAA_C_LANGUAGE
dnl NAUSICAA_SIZEOF


dnl page
dnl --------------------------------------------------------------------
dnl Done.
dnl --------------------------------------------------------------------

AC_CONFIG_FILES([bin.d/larceny-scheme-script:bin/larceny-scheme-script.in])
AC_CONFIG_FILES([bin.d/ikarus-scheme-script:bin/ikarus-scheme-script.in])
AC_CONFIG_FILES([bin.d/ypsilon-scheme-script:bin/ypsilon-scheme-script.in])
dnl AC_CONFIG_FILES([mosh-scheme-script:bin/mosh-scheme-script])
AC_CONFIG_FILES([Makefile.custom])
NAUSICAA_END


dnl end of file
