dnl
dnl Part of: Nausicaa/SQLite
dnl Contents: configuration sqlite
dnl Date: Thu Oct 29, 2009
dnl
dnl Abstract
dnl
dnl
dnl
dnl Copyright (c) 2009 Marco Maggi <marcomaggi@gna.org>
dnl
dnl This  program  is free  software:  you  can redistribute  it
dnl and/or modify it  under the terms of the  GNU General Public
dnl License as published by the Free Software Foundation, either
dnl version  3 of  the License,  or (at  your option)  any later
dnl version.
dnl
dnl This  program is  distributed in  the hope  that it  will be
dnl useful, but  WITHOUT ANY WARRANTY; without  even the implied
dnl warranty  of  MERCHANTABILITY or  FITNESS  FOR A  PARTICULAR
dnl PURPOSE.   See  the  GNU  General Public  License  for  more
dnl details.
dnl
dnl You should  have received a  copy of the GNU  General Public
dnl License   along   with    this   program.    If   not,   see
dnl <http://www.gnu.org/licenses/>.
dnl

dnl page
dnl --------------------------------------------------------------------
dnl Setup.
dnl --------------------------------------------------------------------

AC_INIT([nausicaa-sqlite],[0.1d0],[marcomaggi@gna.org])
DS_BEGIN([./src/libraries/foreign/sqlite.sls])
AC_CANONICAL_TARGET
NAUSICAA_BEGIN
DS_EXCLUDE_SECTION([CONFIG_INSPECTION_SCRIPT])
DS_EXCLUDE_SECTION([AUTOCONF])
DS_EXCLUDE_SECTION([PKGCONFIG])
dnl NAUSICAA_SCHEME_CHECK_LIBRARY([NAU_FOREIGN],[(foreign ffi)])
NAUSICAA_C_LANGUAGE
AC_CHECK_HEADERS([sqlite3.h],,[AC_MSG_FAILURE([cannot find SQLite header],[2])])
AC_CHECK_LIB([sqlite3],[sqlite3_version],,[AC_MSG_FAILURE([cannot find SQLite library],[2])])
NAUSICAA_SIZEOF

dnl page
dnl --------------------------------------------------------------------
dnl Helper functions.
dnl --------------------------------------------------------------------

m4_define([NAU_SQLITE_INCLUDES],[
#include <sqlite3.h>
])

AC_DEFUN([NAU_SQLITE_INSPECT_TYPE],
  [NAUSICAA_INSPECT_TYPE([$1],[$2],[$3],[#f],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_INSPECT_STRUCT_TYPE],
  [NAUSICAA_INSPECT_STRUCT_TYPE([$1],[$2],[#f],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_INSPECT_FIELD_TYPE],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],[#f],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_ENUM_VALUE],
  [NAU_SQLITE_VALUEOF_TEST([$1],[$1])])

AC_DEFUN([NAU_SQLITE_DEFINE_VALUE],
  [NAU_SQLITE_VALUEOF_TEST([$1],[$1])])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_SQLITE_SIZEOF_TEST],
  [NAUSICAA_SIZEOF_TEST([$1],[$2],[#f],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_VALUEOF_TEST],
  [NAUSICAA_VALUEOF_TEST([$1],[$2],[#f],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_OFFSETOF_FIELD_TEST],
  [NAUSICAA_OFFSETOF_FIELD_TEST([$1],[$2],[$3],[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_STRUCT_FIELD],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],,[NAU_SQLITE_INCLUDES])])

AC_DEFUN([NAU_SQLITE_STRING_VALUE],
  [NAUSICAA_STRING_TEST([$1],[$2],[#f],[NAU_SQLITE_INCLUDES])])

dnl page
dnl --------------------------------------------------------------------
dnl Data types inspection.
dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_TYPE([SQLITE_INT64],[sqlite3_int64],[signed-int])
NAU_SQLITE_INSPECT_TYPE([SQLITE_UINT64],[sqlite3_uint64],[unsigned-int])


dnl page
dnl --------------------------------------------------------------------
dnl Data structures inspection.
dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_FILE],[sqlite3_file])
NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_FILE_PMETHODS],[sqlite3_file],[pMethods],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_SQLITE_IO_METHODS_FIELD],
  [NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_IO_METHODS_$1],[sqlite3_io_methods],[$2],[$3])])

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_IO_METHODS],[sqlite3_io_methods])

NAU_SQLITE_IO_METHODS_FIELD([IVERSION],[iVersion],[signed-int])
NAU_SQLITE_IO_METHODS_FIELD([XCLOSE],[xClose],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XREAD],[xRead],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XWRITE],[xWrite],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XTRUNCATE],[xTruncate],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XSYNC],[xSync],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XFILESIZE],[xFileSize],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XLOCK],[xLock],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XUNLOCK],[xUnlock],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XCHECKRESERVEDLOCK],[xCheckReservedLock],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XFILECONTROL],[xFileControl],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XSECTORSIZE],[xSectorSize],[pointer])
NAU_SQLITE_IO_METHODS_FIELD([XDEVICECHARACTERISTICS],[xDeviceCharacteristics],[pointer])

dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_VFS],[sqlite3_vfs])

AC_DEFUN([NAU_SQLITE_VFS_FIELD],
  [NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_VFS_$1],[sqlite3_vfs],[$2],[$3])])

NAU_SQLITE_VFS_FIELD([IVERSION],[iVersion],[signed-int])
NAU_SQLITE_VFS_FIELD([SZOSFILE],[szOsFile],[signed-int])
NAU_SQLITE_VFS_FIELD([MXPATHNAME],[mxPathname],[signed-int])
NAU_SQLITE_VFS_FIELD([PNEXT],[pNext],[pointer])
NAU_SQLITE_VFS_FIELD([ZNAME],[zName],[pointer])
NAU_SQLITE_VFS_FIELD([PAPPDATA],[pAppData],[pointer])
NAU_SQLITE_VFS_FIELD([XOPEN],[xOpen],[pointer])
NAU_SQLITE_VFS_FIELD([XDELETE],[xDelete],[pointer])
NAU_SQLITE_VFS_FIELD([XACCESS],[xAccess],[pointer])
NAU_SQLITE_VFS_FIELD([XFULLPATHNAME],[xFullPathname],[pointer])
NAU_SQLITE_VFS_FIELD([XDLOPEN],[xDlOpen],[pointer])
NAU_SQLITE_VFS_FIELD([XDLERROR],[xDlError],[pointer])
NAU_SQLITE_VFS_FIELD([XDLSYM],[xDlSym],[pointer])
NAU_SQLITE_VFS_FIELD([XDLCLOSE],[xDlClose],[pointer])
NAU_SQLITE_VFS_FIELD([XRANDOMNESS],[xRandomness],[pointer])
NAU_SQLITE_VFS_FIELD([XSLEEP],[xSleep],[pointer])
NAU_SQLITE_VFS_FIELD([XCURRENTTIME],[xCurrentTime],[pointer])
NAU_SQLITE_VFS_FIELD([XGETLASTERROR],[xGetLastError],[pointer])

dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_MEM_METHODS],[sqlite3_mem_methods])

AC_DEFUN([NAU_SQLITE_MEM_METHODS_FIELD],
  [NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_MEM_METHODS_$1],[sqlite3_mem_methods],[$2],[$3])])

NAU_SQLITE_MEM_METHODS_FIELD([XMALLOC],[xMalloc],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XFREE],[xFree],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XREALLOC],[xRealloc],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XSIZE],[xSize],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XROUNDUP],[xRoundup],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XINIT],[xInit],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([XSHUTDOWN],[xShutdown],[pointer])
NAU_SQLITE_MEM_METHODS_FIELD([PAPPDATA],[pAppData],[pointer])

dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_MUTEX_METHODS],[sqlite3_mutex_methods])

AC_DEFUN([NAU_SQLITE_MUTEX_METHODS_FIELD],
  [NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_MUTEX_METHODS_$1],[sqlite3_mutex_methods],[$2],[$3])])

NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXINIT],[xMutexInit],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXEND],[xMutexEnd],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXALLOC],[xMutexAlloc],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXFREE],[xMutexFree],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXENTER],[xMutexEnter],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXTRY],[xMutexTry],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXLEAVE],[xMutexLeave],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXHELD],[xMutexHeld],[pointer])
NAU_SQLITE_MUTEX_METHODS_FIELD([XMUTEXNOTHELD],[xMutexNotheld],[pointer])

dnl --------------------------------------------------------------------

NAU_SQLITE_INSPECT_STRUCT_TYPE([SQLITE_PCACHE_METHODS],[sqlite3_pcache_methods])

AC_DEFUN([NAU_SQLITE_PCACHE_METHODS_FIELD],
  [NAU_SQLITE_INSPECT_FIELD_TYPE([SQLITE_PCACHE_METHODS_$1],[sqlite3_pcache_methods],[$2],[$3])])

NAU_SQLITE_PCACHE_METHODS_FIELD([PARG],[pArg],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XINIT],[xInit],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XSHUTDOWN],[xShutdown],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XCREATE],[xCreate],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XCACHESIZE],[xCachesize],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XPAGECOUNT],[xPagecount],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XFETCH],[xFetch],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XUNPIN],[xUnpin],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XREKEY],[xRekey],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XTRUNCATE],[xTruncate],[pointer])
NAU_SQLITE_PCACHE_METHODS_FIELD([XDESTROY],[xDestroy],[pointer])


dnl page
dnl --------------------------------------------------------------------
dnl Constants.
dnl --------------------------------------------------------------------

NAU_SQLITE_STRING_VALUE([SQLITE_VERSION],[SQLITE_VERSION])
NAU_SQLITE_STRING_VALUE([SQLITE_SOURCE_ID],[SQLITE_SOURCE_ID])

NAU_SQLITE_DEFINE_VALUE([SQLITE_VERSION_NUMBER])

dnl error codes
NAU_SQLITE_DEFINE_VALUE([SQLITE_OK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ERROR])
NAU_SQLITE_DEFINE_VALUE([SQLITE_INTERNAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_PERM])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ABORT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_BUSY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCKED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_NOMEM])
NAU_SQLITE_DEFINE_VALUE([SQLITE_READONLY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_INTERRUPT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CORRUPT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_NOTFOUND])
NAU_SQLITE_DEFINE_VALUE([SQLITE_FULL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CANTOPEN])
NAU_SQLITE_DEFINE_VALUE([SQLITE_PROTOCOL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_EMPTY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SCHEMA])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TOOBIG])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONSTRAINT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MISMATCH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MISUSE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_NOLFS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_AUTH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_FORMAT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_RANGE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_NOTADB])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ROW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DONE])

dnl extended error codes
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_READ])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_SHORT_READ])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_WRITE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_FSYNC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_DIR_FSYNC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_TRUNCATE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_FSTAT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_UNLOCK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_RDLOCK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_DELETE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_BLOCKED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_NOMEM])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_ACCESS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_CHECKRESERVEDLOCK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_LOCK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_CLOSE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOERR_DIR_CLOSE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCKED_SHAREDCACHE])

dnl file open flags
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_READONLY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_READWRITE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_CREATE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_DELETEONCLOSE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_EXCLUSIVE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_MAIN_DB])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_TEMP_DB])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_TRANSIENT_DB])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_MAIN_JOURNAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_TEMP_JOURNAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_SUBJOURNAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_MASTER_JOURNAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_NOMUTEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_FULLMUTEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_SHAREDCACHE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_OPEN_PRIVATECACHE])

dnl device characteristics
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC512])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC1K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC2K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC4K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC8K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC16K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC32K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_ATOMIC64K])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_SAFE_APPEND])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IOCAP_SEQUENTIAL])

dnl file locking levels
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCK_NONE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCK_SHARED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCK_RESERVED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCK_PENDING])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LOCK_EXCLUSIVE])

dnl synchronisation type flags
NAU_SQLITE_DEFINE_VALUE([SQLITE_SYNC_NORMAL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SYNC_FULL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SYNC_DATAONLY])

dnl file control opcodes
NAU_SQLITE_DEFINE_VALUE([SQLITE_FCNTL_LOCKSTATE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_GET_LOCKPROXYFILE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SET_LOCKPROXYFILE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LAST_ERRNO])

dnl flags for the xAccess method
NAU_SQLITE_DEFINE_VALUE([SQLITE_ACCESS_EXISTS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ACCESS_READWRITE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ACCESS_READ])

dnl configuration options
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_SINGLETHREAD])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_MULTITHREAD])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_SERIALIZED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_MALLOC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_GETMALLOC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_SCRATCH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_PAGECACHE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_HEAP])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_MEMSTATUS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_MUTEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_GETMUTEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_CHUNKALLOC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_LOOKASIDE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_PCACHE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CONFIG_GETPCACHE])

dnl other configuration options
NAU_SQLITE_DEFINE_VALUE([SQLITE_DBCONFIG_LOOKASIDE])

dnl authoriser return codes
NAU_SQLITE_DEFINE_VALUE([SQLITE_DENY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_IGNORE])

dnl authoriser action codes
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_INDEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TEMP_INDEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TEMP_TABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TEMP_TRIGGER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TEMP_VIEW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_TRIGGER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_VIEW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DELETE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_INDEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TEMP_INDEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TEMP_TABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TEMP_TRIGGER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TEMP_VIEW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_TRIGGER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_VIEW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_INSERT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_PRAGMA])
NAU_SQLITE_DEFINE_VALUE([SQLITE_READ])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SELECT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TRANSACTION])
NAU_SQLITE_DEFINE_VALUE([SQLITE_UPDATE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ATTACH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DETACH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ALTER_TABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_REINDEX])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ANALYZE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_CREATE_VTABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_DROP_VTABLE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_FUNCTION])
NAU_SQLITE_DEFINE_VALUE([SQLITE_SAVEPOINT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_COPY])

dnl run-time limit categories
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_LENGTH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_SQL_LENGTH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_COLUMN])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_EXPR_DEPTH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_COMPOUND_SELECT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_VDBE_OP])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_FUNCTION_ARG])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_ATTACHED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_LIKE_PATTERN_LENGTH])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_VARIABLE_NUMBER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_LIMIT_TRIGGER_DEPTH])

dnl fundamental data types
NAU_SQLITE_DEFINE_VALUE([SQLITE_INTEGER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_FLOAT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_BLOB])
NAU_SQLITE_DEFINE_VALUE([SQLITE_NULL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TEXT])
NAU_SQLITE_DEFINE_VALUE([SQLITE3_TEXT])

dnl text encodings
NAU_SQLITE_DEFINE_VALUE([SQLITE_UTF8])
NAU_SQLITE_DEFINE_VALUE([SQLITE_UTF16LE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_UTF16BE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_UTF16])
NAU_SQLITE_DEFINE_VALUE([SQLITE_ANY])
NAU_SQLITE_DEFINE_VALUE([SQLITE_UTF16_ALIGNED])

dnl special constructor behaviour
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATIC])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TRANSIENT])

dnl mutex types
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_FAST])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_RECURSIVE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_MASTER])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_MEM])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_MEM2])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_OPEN])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_PRNG])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_LRU])
NAU_SQLITE_DEFINE_VALUE([SQLITE_MUTEX_STATIC_LRU2])

dnl test operation codes
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_PRNG_SAVE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_PRNG_RESTORE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_PRNG_RESET])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_BITVEC_TEST])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_FAULT_INSTALL])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_BENIGN_MALLOC_HOOKS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_PENDING_BYTE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_ASSERT])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_ALWAYS])
NAU_SQLITE_DEFINE_VALUE([SQLITE_TESTCTRL_RESERVE])

dnl status parameters
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_MEMORY_USED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_PAGECACHE_USED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_PAGECACHE_OVERFLOW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_SCRATCH_USED])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_SCRATCH_OVERFLOW])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_MALLOC_SIZE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_PARSER_STACK])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_PAGECACHE_SIZE])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STATUS_SCRATCH_SIZE])

NAU_SQLITE_DEFINE_VALUE([SQLITE_DBSTATUS_LOOKASIDE_USED])

NAU_SQLITE_DEFINE_VALUE([SQLITE_STMTSTATUS_FULLSCAN_STEP])
NAU_SQLITE_DEFINE_VALUE([SQLITE_STMTSTATUS_SORT])


dnl page
dnl --------------------------------------------------------------------
dnl Done.
dnl --------------------------------------------------------------------

AC_CONFIG_FILES([../src/libraries/foreign/sqlite/sizeof.sls:src/libraries/foreign/sqlite/sizeof.sls.in])
DS_CONFIG_FILE_SLACKWARE_BIN_DESC
DS_CONFIG_FILE_SLACKWARE_DOC_DESC
NAUSICAA_END
DS_END

### end of file
